force-app/main/default/objects/Movie_Booking__c/Movie_Booking__c.object-meta.xml
<CustomObject>
    <label>Movie Booking</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Movie Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Movie Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>