force-app/main/default/objects/Movie_Booking__c/fields/Cancel_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Change_Reason__c</fullName>
    <label>Cancel/Change Reason</label>
    <type>TextArea</type>
</CustomField>