force-app/main/default/objects/Movie_Booking__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <formula>today() ==  Booking_Date__c &amp;&amp; (Show_Time__c &gt;=  TIMEVALUE(&apos;03:00:00.000Z&apos;) || Show_Time__c &lt;=  TIMEVALUE(&apos;06:00:00.000Z&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>