force-app/main/default/objects/Movie_Booking__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Movie Bookings</relationshipLabel>
    <relationshipName>Movie_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>