force-app/main/default/objects/Movie_Booking__c/fields/Movie_Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Movie_Time_Slot__c</fullName>
    <label>Movie Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12:00AM-03:00AM</fullName>
            </value>
            <value>
                <fullName>03:00AM-06:00AM</fullName>
            </value>
            <value>
                <fullName>06:00AM-09:00AM</fullName>
            </value>
            <value>
                <fullName>09:00AM-12:00PM</fullName>
            </value>
            <value>
                <fullName>12:00PM-03:00PM</fullName>
            </value>
            <value>
                <fullName>03:00PM-06:00PM</fullName>
            </value>
            <value>
                <fullName>06:00PM-09:00PM</fullName>
            </value>
            <value>
                <fullName>09:00PM-12:00AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>