force-app/main/default/objects/Movie_Booking__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Booking_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Booking_Line_Item__c.Movie_Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>